# fixed-num

./: .gitignore  Cargo.toml  README.md
crates/bench/: Cargo.toml
crates/bench/benches/: ops.rs
crates/helper/: Cargo.toml
crates/helper/src/: lib.rs
crates/lib/: Cargo.toml  README.md  build.rs
crates/lib/src/: dec19x19.rs  i128_ops.rs  lib.rs  ops.rs  serde.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/validator/: Cargo.toml
crates/validator/src/: lib.rs
tests/nightly/: Cargo.toml
tests/nightly/src/: main.rs
tests/stable/: Cargo.toml
tests/stable/src/: main.rs
