[package]
name = "fixed-num-macro"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "A helper crate for the 'fixed-num' crate."
keywords = []

[dependencies]
quote            = { workspace = true }
fixed-num-helper = { workspace = true }

[lib]
proc-macro = true

[lints]
workspace = true
