[package]
name = "fixed-num-validator"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
description = "A helper crate for the 'fixed-num' crate."
keywords = []

[lib]

[dependencies]
fixed-num-helper = { workspace = true }
bigdecimal       = { workspace = true }

[lints]
workspace = true
